; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_varlink_server_connections_max.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_varlink.c_varlink_server_connections_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.rlimit = type { i32 }

@RLIMIT_NOFILE = common dso_local global i32 0, align 4
@VARLINK_DEFAULT_CONNECTIONS_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @varlink_server_connections_max(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.rlimit, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %2, align 4
  br label %30

11:                                               ; preds = %1
  %12 = load i32, i32* @RLIMIT_NOFILE, align 4
  %13 = call i64 @getrlimit(i32 %12, %struct.rlimit* %4)
  %14 = icmp sge i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert_se(i32 %15)
  %17 = load i32, i32* @VARLINK_DEFAULT_CONNECTIONS_MAX, align 4
  %18 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %4, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = sdiv i32 %19, 4
  %21 = mul nsw i32 %20, 3
  %22 = icmp sgt i32 %17, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %11
  %24 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %4, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = sdiv i32 %25, 4
  %27 = mul nsw i32 %26, 3
  store i32 %27, i32* %2, align 4
  br label %30

28:                                               ; preds = %11
  %29 = load i32, i32* @VARLINK_DEFAULT_CONNECTIONS_MAX, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %23, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @getrlimit(i32, %struct.rlimit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
